tests/rosetta/out/Smalltalk/avl-tree.out
/workspace/mochi/tests/rosetta/out/Smalltalk/avl-tree.st:30: parse error, expected integer literal or floating-point literal or decimal literal
